Make fixed width, work on navbar

--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,19 @@
-.navbar {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 20px;
-  background-color: teal;
-  color: #fff;
+.wrapper {
+  margin-right: auto;
+  margin-left: auto;
+  max-width: 960px;
+  padding-right: 10px;
+  padding-left: 10px;
+}
+
+body {
+  min-height: 100vh;
+  margin: 0
 }
 
 header {
+  min-height: 50px;
+  background: lightcyan;
   border-bottom: 1px solid rgb(0, 0, 0);
 }
 
@@ -17,6 +23,17 @@ nav {
   justify-content: space-between;
 }
 
-main {
-  border-bottom: 1px solid rgb(0, 0, 0);
+nav ul {
+  list-style: none;
+}
+
+nav ul li {
+  display: inline;
+  padding-right: 10px;
+}
+
+footer {
+  min-height: 50px;
+  background: papayawhip;
+  border-top: 1px solid rgb(0, 0, 0);
 }
