--- a/styles.css
+++ b/styles.css
@@ -1,19 +1,18 @@
 .wrapper {
-  margin-right: auto;
-  margin-left: auto;
-  max-width: 960px;
-  padding-right: 10px;
-  padding-left: 10px;
+  padding-left: 30px;
+  padding-right: 30px;
+  margin: auto auto;
 }
 
 body {
   min-height: 100vh;
-  margin: 0
+  margin: 0;
+  display: flex;
+  flex-direction: column;
 }
 
 header {
-  min-height: 50px;
-  background: lightcyan;
+  max-width: 1024px;
   border-bottom: 1px solid rgb(0, 0, 0);
 }
 
@@ -32,8 +31,12 @@ nav ul li {
   padding-right: 10px;
 }
 
+main {
+  flex: 1;
+}
+
 footer {
   min-height: 50px;
-  background: papayawhip;
   border-top: 1px solid rgb(0, 0, 0);
+  text-align: center;
 }
