--- a/styles.css
+++ b/styles.css
@@ -2,8 +2,10 @@ body {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
-  width: 70%;
+  max-width: 700px;
   margin: 0 auto;
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
 header {
@@ -40,4 +42,13 @@ footer {
 
 .post-title, time {
   font-style: italic
+}
+
+.portrait-image {
+  width:100%;
+  max-width: 192px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 22px;
 }
