--- a/styles.css
+++ b/styles.css
@@ -4,8 +4,8 @@ body {
   min-height: 100vh;
   max-width: 700px;
   margin: 0 auto;
-  padding-left: 10px;
-  padding-right: 10px;
+  padding-left: 12px;
+  padding-right: 12px;
 }
 
 header {
@@ -34,6 +34,10 @@ main {
 footer {
   border-top: 1px solid black;
   text-align: center;
+}
+
+p {
+  line-height: 1.2;
 }
 
 code:not([class]) {
