--- a/styles.css
+++ b/styles.css
@@ -46,11 +46,11 @@ code:not([class]) {
   border-radius: 6px;
 }
 
-.post-title, h2 {
+.post-title  {
   margin-bottom: 0;
 }
 
-.post-title, time {
+.post-date {
   font-style: italic
 }
 
