--- a/styles.css
+++ b/styles.css
@@ -44,6 +44,8 @@ code:not([class]) {
   background-color: rgba(175,184,193,.2);
   padding: 0.2em 0.4em;
   border-radius: 6px;
+  font-size: 0.8em;
+  font-family: consolas
 }
 
 .post-title  {
