--- a/styles.css
+++ b/styles.css
@@ -37,12 +37,31 @@ footer {
 }
 
 p {
+  margin-block-start: 0em;
   line-height: 1.2;
+}
+
+h1, h2, h3 {
+  margin-top: 20px;
+  margin-bottom: 2px;
+}
+
+time {
+  display: inline-block;
+  margin-bottom: 10px;
+}
+
+code[class*=language-] {
+  font-size: 0.9em;
+}
+
+pre[class*=language-] {
+  padding: 0.9em;
 }
 
 code:not([class]) {
   background-color: rgba(175,184,193,.2);
-  padding: 0.2em 0.4em;
+  padding: 0.1em 0.4em;
   border-radius: 6px;
   font-size: 0.8em;
   font-family: consolas
@@ -53,7 +72,7 @@ code:not([class]) {
 }
 
 .post-date {
-  font-style: italic
+  font-style: italic;
 }
 
 .portrait-image {
@@ -69,6 +88,7 @@ code:not([class]) {
   background-color: rgb(229, 243, 254);
   border: 1px solid rgb(205,205,205);
   border-radius: 0.25rem;
+  padding-top: 10px;
   padding-left: 16px;
   padding-right: 16px;
   margin-top: 20px;;
