--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,7 @@ body {
   padding-left: 12px;
   padding-right: 12px;
   font-family: sans-serif;
+  font-size: 90%;
 }
 
 header {
@@ -39,7 +40,7 @@ footer {
 
 p {
   margin-block-start: 0em;
-  line-height: 1.2;
+  line-height: 1.4;
 }
 
 .callout p {
