Begin re-implementing website in jekyll

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="../styles.css" />
-  <title>Rasmus Källqvist's Blog</title>
+  <link rel="stylesheet" href="styles.css" />
+  <title>{{ page.title }}</title>
 </head>
 
 <body>
@@ -19,7 +19,7 @@
   </header>
 
   <main>
-    <h1>Recent posts</h1>
+    {{ content }}
   </main>
 
   <footer>
