--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,12 +3,14 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="/styles.css" />
+  <link rel="stylesheet" href="/themes/styles.css" />
   <link rel="stylesheet" href="/themes/prism.css" />
   <title>{{ page.title }}</title>
 </head>
 
 <body>
+  <script src="/scripts/prism.js"></script>
+
   <header>
     <nav>
       <a href="/">Rasmus Källqvist's Blog</a>
