--- a/themes/styles.css
+++ b/themes/styles.css
@@ -42,6 +42,11 @@ p {
   line-height: 1.4;
 }
 
+a {
+  color: #0d77d4;
+  text-decoration: none;
+}
+
 h1, h2, h3 {
   margin-top: 20px;
   margin-bottom: 2px;
