--- a/themes/styles.css
+++ b/themes/styles.css
@@ -29,6 +29,18 @@ header nav ul li {
   padding-right: 10px;
 }
 
+header nav a {
+  text-decoration: none;
+  padding: 0.5em;
+  color: black;
+  border-radius: 6px;
+}
+
+header nav a:hover {
+  background-color: rgb(246, 246, 246);
+  text-decoration: none;
+}
+
 main {
   flex: 1;
 }
