--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,11 +11,22 @@
 </head>
 
 <body>
+  <script src="/scripts/hamburger.js"></script>
   <script src="/scripts/prism.js"></script>
 
   <header>
-    <nav>
+    <div class="site-header-top">
       <a href="/">Rasmus Källqvist's Blog</a>
+      <button class="hamburger">
+        <div class="hamburger-open">
+          <div class="hamburger-bar"></div>
+          <div class="hamburger-bar"></div>
+          <div class="hamburger-bar"></div>
+        </div>
+        <div class="hamburger-close">&times;</div>
+      </button>
+    </div>
+    <nav class="site-header-nav">
       <ul>
         <li><a href="/archive.html">Archive</a></li>
         <li><a href="/about.html">About</a></li>
