--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,8 +3,10 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="shortcut icon" href="/images/favicon.svg" />
   <link rel="stylesheet" href="/themes/styles.css" />
   <link rel="stylesheet" href="/themes/prism.css" />
+
   <title>{{ page.title }}</title>
 </head>
 
