--- a/themes/styles.css
+++ b/themes/styles.css
@@ -20,6 +20,10 @@ footer {
   text-align: center;
 }
 
+footer p {
+  line-height: 1em;
+}
+
 /* Site header */
 header {
   display: flex;
@@ -36,10 +40,8 @@ header {
 }
 
 header a {
-  margin-block-start: 0.5em;
-  margin-block-end: 0.5em;
   text-decoration: none;
-  padding: 0.5em;
+  padding: 1em;
   color: black;
   border-radius: 6px;
 }
