--- a/themes/styles.css
+++ b/themes/styles.css
@@ -41,7 +41,8 @@ header {
 
 header a {
   text-decoration: none;
-  padding: 1em;
+  margin: 0.5em;
+  padding: 0.5em;
   color: black;
   border-radius: 6px;
 }
