--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,16 +3,15 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="shortcut icon" href="/images/favicon.svg" />
-  <link rel="stylesheet" href="/themes/styles.css" />
-  <link rel="stylesheet" href="/themes/prism.css" />
+  <link rel="shortcut icon" href="/assets/images/favicon.svg" />
+  <link rel="stylesheet" href="/assets/css/styles.css" />
+  <link rel="stylesheet" href="/assets/css/highlight.css" />
 
   <title>{{ page.title }}</title>
 </head>
 
 <body>
-  <script src="/scripts/hamburger.js"></script>
-  <script src="/scripts/prism.js"></script>
+  <script src="/assets/js/hamburger.js"></script>
 
   <header>
     <div class="site-header-top">
