Try to fix MathJax

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,14 +6,12 @@
   <link rel="shortcut icon" href="/assets/images/favicon.svg" />
   <link rel="stylesheet" href="/assets/css/styles.css" />
   <link rel="stylesheet" href="/assets/css/highlight.css" />
-  <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
-
+  <script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script>
+  <script src="/assets/js/hamburger.js"></script>
   <title>{{ page.title }}</title>
 </head>
 
 <body>
-  <script src="/assets/js/hamburger.js"></script>
-
   <header>
     <div class="site-header-top">
       <a href="/">Rasmus Källqvist's Blog</a>
