--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,8 +6,11 @@
   <link rel="shortcut icon" href="/assets/images/favicon.svg" />
   <link rel="stylesheet" href="/assets/css/styles.css" />
   <link rel="stylesheet" href="/assets/css/highlight.css" />
-  <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
-
+  <script
+    type="text/javascript"
+    charset="utf-8"
+    src="https://cdn.jsdelivr.net/npm/mathjax@2/MathJax.js?config=TeX-AMS_CHTML"></script>
+  <script type="text/javascript" src="/assets/js/mathjax-config.js"></script>
   <title>{{ page.title }}</title>
 </head>
 
