--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -41,18 +41,14 @@ header {
 
 header a {
   text-decoration: none;
-  margin: 0.5em;
-  padding: 0.5em;
+  margin: 0.5em 0;
+  padding: 0.5em 0;
   color: black;
   border-radius: 6px;
 }
 
 header a:hover {
   background-color: rgb(246, 246, 246);
-}
-
-.site-header-nav {
-  padding-right: 0.5em;
 }
 
 .site-header-nav ul {
