--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -42,7 +42,7 @@ header {
 header a {
   text-decoration: none;
   margin: 0.5em 0;
-  padding: 0.5em 0;
+  padding: 0.5em 0.3em;
   color: black;
   border-radius: 6px;
 }
