--- a/assets/css/highlight.css
+++ b/assets/css/highlight.css
@@ -6,6 +6,14 @@
   border-radius: 6px;
 }
 
+code.language-plaintext {
+  padding: 0.2em 0.4em;
+  background-color: rgb(239, 241, 243);
+  white-space: break-spaces;
+  line-height: 1.5em;
+  border-radius: 6px;
+}
+
 .highlight table td {
   padding: 5px;
 }
