--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -170,6 +170,21 @@ time {
   font-style: italic;
 }
 
+blockquote {
+  margin: 0;
+  padding: 0 1em;
+  color: rgb(101, 109, 118);
+  border-left: 0.25em solid rgb(208, 215, 222);
+}
+
+blockquote>:first-child {
+  margin-top: 0;
+}
+
+blockquote>:last-child {
+  margin-bottom: 0;
+}
+
 .callout {
   background-color: rgb(229, 243, 254);
   border: 1px solid rgb(205, 205, 205);
