--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -185,6 +185,18 @@ blockquote>:last-child {
   margin-bottom: 0;
 }
 
+figure {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+figcaption {
+  font-style: italic;
+  font-size: 85%;
+  margin-top: 1em;
+}
+
 .callout {
   background-color: rgb(229, 243, 254);
   border: 1px solid rgb(205, 205, 205);
