Equilateral Triangle post
- Write post about Proposition 1 in the Elements
- Add automatic figcaption counting

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,10 +9,7 @@
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/mathjax@2/MathJax.js?config=TeX-AMS_CHTML"></script>
   <script type="text/javascript" src="/assets/js/mathjax-config.js"></script>
   <script src="/assets/js/hamburger.js"></script>
-  <link
-    rel="stylesheet"
-    type="text/css"
-    href="https://tikzjax.com/v1/fonts.css">
+  <link rel="stylesheet" href="https://tikzjax.com/v1/fonts.css">
   <script src="https://tikzjax.com/v1/tikzjax.js"></script>
   <title>{{ page.title }}</title>
 </head>
