--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -9,6 +9,7 @@ body {
   padding-right: 12px;
   font-family: sans-serif;
   font-size: 100%;
+  counter-reset: fig-counter;
 }
 
 main {
@@ -18,9 +19,11 @@ main {
 footer {
   border-top: 1px solid black;
   text-align: center;
+  margin-top: 1em;
 }
 
 footer p {
+  margin-top: 1em;
   line-height: 1em;
 }
 
@@ -186,15 +189,37 @@ blockquote>:last-child {
 }
 
 figure {
+  margin: 1em auto;
   display: flex;
   flex-direction: column;
   align-items: center;
+  counter-increment: fig-counter;
+}
+
+figure div {
+  aspect-ratio: 1 / 1;
+  max-width: 100%;
+}
+
+svg {
+  max-width: 95%;
 }
 
 figcaption {
   font-style: italic;
   font-size: 85%;
   margin-top: 1em;
+}
+
+figcaption:before {
+  content: 'Fig ' counter(fig-counter) ', ';
+}
+
+img {
+  width: auto;
+  height: auto;
+  /* max-width: calc(0.90 * 425px); */
+  max-width: 90%;
 }
 
 .callout {
@@ -205,4 +230,12 @@ figcaption {
   padding-right: 16px;
   margin-top: 20px;
   margin-bottom: 20px;
+}
+
+/* hack to get around math overflowing on mobile */
+@media (max-width: 458px) {
+  .MJXc-display {
+    display: inline-block;
+    overflow-x: scroll;
+  }
 }
