--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,7 +2,9 @@
 layout: default
 ---
 
-<h1>{{ page.title }}</h1>
+<h1>
+  <a href="{{ page.url }}">{{ page.title }}</a>
+</h1>
 <time datetime="{{ page.date | date_to_xmlschema }}">{{ page.date | date_to_long_string }}</time>
 
 {{ content }}
